--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ margin: 10% auto;
   outline: none;
   border: 10px solid #404B69;
   font-size: 5rem;
-  font-family: 'Arvo', cursive;
+  font-family: 'Ubuntu', cursive;
   line-height: 2;
   font-weight: 900;
   color: #DA0463;
